--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ branches:
   - master
   - ci-test
   - stable
+  - /ci-build\/.*/
 
 test: off
 
@@ -31,10 +32,9 @@ install:
     if ($env:DECRYPTION_PASSWORD) {
       secure-file\tools\secure-file -decrypt build\resources\ssh\nylas-n1-ci-ssh-secure-file.enc -secret $env:DECRYPTION_PASSWORD
       mv -Force build\resources\ssh\nylas-n1-ci-ssh-secure-file c:\users\appveyor\.ssh\id_rsa
-      git submodule init
 
       # http://stackoverflow.com/questions/21002919/running-a-remote-powershell-script-with-a-git-command-in-it-results-in-nativecom
-      Start-Process -FilePath git.exe -ArgumentList 'submodule update'  -Wait -NoNewWindow
+      Start-Process -FilePath git.exe -ArgumentList 'submodule update --init --recursive'  -Wait -NoNewWindow
 
       secure-file\tools\secure-file -decrypt src\pro\encrypted_certificates\appveyor\win-nylas-n1.p12.enc -secret $env:DECRYPTION_PASSWORD
       secure-file\tools\secure-file -decrypt src\pro\encrypted_certificates\appveyor\set_win_env.ps1.enc -secret $env:DECRYPTION_PASSWORD
