--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,6 +48,7 @@ environment:
   matrix:
   - NODE_VERSION: 0.12
     PUBLISH_BUILD: true
+    GYP_MSVS_VERSION: 2013
   global:
     CERTIFICATE_FILE: .\src\pro\encrypted_certificates\appveyor\win-nylas-n1.p12
     DECRYPTION_PASSWORD:
