--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,7 @@ build:
 install:
 - ps: Install-Product node $env:NODE_VERSION $env:PLATFORM
 - ps: nuget install secure-file -ExcludeVersion
+- ps: npm config set msvs_version 2015
 
 # We need to extract the encrypted private ssh key to clone the submodule.
 - ps: |
